data/derived/sp14/progs/unify/prog0745.ml.out
Characters 154-167:
  0 -> r_digitalRoot 
       ^^^^^^^^^^^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type int
